[cs-ui] CSDemo - Reduce left spacing in icon tab search bar due to no longer having the toggle button overlaid

--- a/cs-ui-demo/src/sass/_sections.scss
+++ b/cs-ui-demo/src/sass/_sections.scss
@@ -294,7 +294,6 @@
 	.icons-search-wrapper {
 		position: relative;
 		width: 100%;
-		padding-inline-start: 2rem;
 		@include sbg(--csd-icons-search-field-bg);
 		@include css4 {
 			box-shadow: 0 1px 3px cvar(--csd-shadow-light), 0 1px 2px cvar(--csd-shadow-medium);
@@ -305,7 +304,7 @@
 			width: 1rem;
 			height: 1rem;
 			top: 1rem;
-			left: 3.25rem;
+			left: 1rem;
 			pointer-events: none;
 			@include sf(--csd-icon-fill);
 		}
